Update configuration to add environment variables and WarcraftLogs settings

--- a/Stats/appsettings.json
+++ b/Stats/appsettings.json
@@ -3,5 +3,9 @@
     "LogLevel": {
       "Default": "Trace"
     }
+  },
+  "WarcraftLogs": {
+    "ClientId": "9e1374bd-2109-44b2-8c92-a67eca63465b",
+    "ClientSecret": ""
   }
 }
