--- a/Stats/Stats.csproj
+++ b/Stats/Stats.csproj
@@ -20,7 +20,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="reportData.graphql">
+    <None Update="*.graphql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
