--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,10 @@ indent_style = space
 indent_size = 2
 indent_style = space
 
+[*.{graphql}]
+indent_size = 4
+indent_style = tab
+
 [*.cs]
 indent_style = tab
 indent_size = 4
@@ -85,30 +89,30 @@ csharp_style_var_for_built_in_types = false:silent
 
 # dotnet_naming_symbols.interface.applicable_kinds = interface
 # dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-# dotnet_naming_symbols.interface.required_modifiers = 
+# dotnet_naming_symbols.interface.required_modifiers =
 
 # dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
 # dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-# dotnet_naming_symbols.types.required_modifiers = 
+# dotnet_naming_symbols.types.required_modifiers =
 
 # dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
 # dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-# dotnet_naming_symbols.non_field_members.required_modifiers = 
+# dotnet_naming_symbols.non_field_members.required_modifiers =
 
 # # Naming styles
 # dotnet_naming_style.begins_with_i.required_prefix = I
-# dotnet_naming_style.begins_with_i.required_suffix = 
-# dotnet_naming_style.begins_with_i.word_separator = 
+# dotnet_naming_style.begins_with_i.required_suffix =
+# dotnet_naming_style.begins_with_i.word_separator =
 # dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-# dotnet_naming_style.pascal_case.required_prefix = 
-# dotnet_naming_style.pascal_case.required_suffix = 
-# dotnet_naming_style.pascal_case.word_separator = 
+# dotnet_naming_style.pascal_case.required_prefix =
+# dotnet_naming_style.pascal_case.required_suffix =
+# dotnet_naming_style.pascal_case.word_separator =
 # dotnet_naming_style.pascal_case.capitalization = pascal_case
 
-# dotnet_naming_style.pascal_case.required_prefix = 
-# dotnet_naming_style.pascal_case.required_suffix = 
-# dotnet_naming_style.pascal_case.word_separator = 
+# dotnet_naming_style.pascal_case.required_prefix =
+# dotnet_naming_style.pascal_case.required_suffix =
+# dotnet_naming_style.pascal_case.word_separator =
 # dotnet_naming_style.pascal_case.capitalization = pascal_case
 # dotnet_style_operator_placement_when_wrapping = beginning_of_line
 # dotnet_style_coalesce_expression = true:suggestion
