--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ indent_style = space
 
 [*.{xml,csproj,config,props,targets}]
 indent_size = 2
-indent_style = space
+indent_style = tab
 
 [*.{graphql}]
 indent_size = 4
