--- a/Stats.ApiService/appsettings.json
+++ b/Stats.ApiService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WarcraftLogs": {
+    "ClientId": "9e1374bd-2109-44b2-8c92-a67eca63465b",
+    "ClientSecret": ""
+  }
 }
