Improve UX of the form with validation and feedback on submit. Add domain lib.

--- a/Stats.ApiService/Stats.ApiService.csproj
+++ b/Stats.ApiService/Stats.ApiService.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Stats.ServiceDefaults\Stats.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Stats\Stats.csproj" />
+    <ProjectReference Include="..\Stats.Domain\Stats.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
