--- a/Stats.Web/Stats.Web.csproj
+++ b/Stats.Web/Stats.Web.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stats.ServiceDefaults\Stats.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Stats.Domain\Stats.Domain.csproj" />
   </ItemGroup>
 
 </Project>
