--- a/Stats/Stats.csproj
+++ b/Stats/Stats.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="ScottPlot" Version="5.0.54" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Stats.Domain\Stats.Domain.csproj" />
+  </ItemGroup>
+
  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
