--- a/Stats.ApiService/Stats.ApiService.csproj
+++ b/Stats.ApiService/Stats.ApiService.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="GraphQL.Client" Version="6.1.0" />
 		<PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.2.0-preview.1.25105.6" />
 		<PackageReference Include="ScottPlot" Version="5.0.54" />
 	</ItemGroup>
 
