--- a/Stats.ApiService/Stats.ApiService.csproj
+++ b/Stats.ApiService/Stats.ApiService.csproj
@@ -23,4 +23,10 @@
 		<PackageReference Include="ScottPlot" Version="5.0.54" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="GameData\Zones.json"
+					CopyToOutputDirectory="PreserveNewest"
+					CopyToPublishDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
